<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogTipsBg"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="189dp"
        android:background="@drawable/shape_ble_bg">


        <TextView
            android:id="@+id/tv_none_robot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_connect_ble_title"
            android:textColor="@color/colorDialogBg"
            android:textSize="24sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_none_robot"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/dialog_connect_ble_tips"
            android:textColor="@color/dialog_ble_color"
            android:textSize="15sp"
            android:visibility="visible" />


        <LinearLayout
            android:id="@+id/ll_connect_ble"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_con_ble_exit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_exit_ble_btn"
                android:textColor="@color/colorDialogText"
                android:textSize="18sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/dialog_ble_color" />

            <TextView
                android:id="@+id/tv_con_ble_sure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_connect_ble_btn"
                android:textColor="@color/colorDialogText"
                android:textSize="18sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_above="@+id/ll_connect_ble"
            android:background="@color/dialog_ble_color" />

    </RelativeLayout>

</LinearLayout>
