<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogTipsBg"
    android:gravity="center">


    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="360dp"
        android:layout_height="189dp"
        android:background="@drawable/shape_ble_bg">

        <RelativeLayout
            android:id="@+id/rl_ble_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_ble_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ble_button_refresh"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_ble_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dialog_ble_title"
                android:textStyle="bold"
                android:textColor="@color/colorDialogBg"
                android:textSize="22sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_ble_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ble_button_off" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="99dp"
            android:paddingRight="99dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_loading"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/dialog_icon_loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="33dp"
                android:maxLines="1"
                android:text="@string/dialog_close_robot_tips"
                android:textColor="@color/dialog_ble_color"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_none_robot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_ble_title"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_none_robot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/dialog_none_robot_tips"
                android:textColor="@color/colorDialogBg"
                android:textSize="24sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_none_robot"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/dialog_open_ble_tips"
                android:textColor="@color/dialog_ble_color"
                android:textSize="15sp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/tv_again_ble"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/dialog_again_loading"
                android:textColor="@color/colorDialogText"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_above="@+id/tv_again_ble"
                android:background="@color/dialog_ble_color" />

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_handi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scrollbarThumbHorizontal="@drawable/bg_slider"
            android:layout_below="@+id/rl_ble_title"
            android:scrollbars="horizontal"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>
